--- a/index.html
+++ b/index.html
@@ -126,49 +126,49 @@
         </div> -->
         <div class="container-fluid">
 <!--             <h2 class="text-center">Portfolio</h2> -->
-            <hr class="primary">
+<!--             <hr class="primary"> -->
 <!--             <h3 class="text-center">Animation</h3> -->
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link animation">
                         <img src="img/rory.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation: Lighting
+                                    Animation: Lighting, Modeling
                                 </div>
                                 <div class="project-name">
-                                    Stargazing (Warning: Links to a video)
+                                    Stargazing
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link animation">
                         <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation: Cloth Simulation
+                                    Animation: Cloth Simulationm, Modeling
                                 </div>
                                 <div class="project-name">
-                                    The Generous Ghost (Warning: Links to a video)
+                                    The Generous Ghost
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-            </div>
+<!--             </div> -->
 <!--             <h3 class="text-center">Technical</h3> -->
-            <div class="row no-gutter">
+<!--             <div class="row no-gutter"> -->
                  <div class="col-lg-4 col-sm-6">
-                    <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Web Development
+                                    Programming: Web Development
                                 </div>
                                 <div class="project-name">
                                     University Catholic Conference of California 2018 Website
@@ -178,12 +178,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/autostitch.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computational Photography
+                                    Programming: Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Image Warping and Mosaicing
@@ -193,12 +193,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/coloring.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computational Photography
+                                    Programming: Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
@@ -208,12 +208,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="FreqsandGrads/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="FreqsandGrads/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/freqs.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computational Photography
+                                    Programming: Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Frequencies and Gradients
@@ -223,12 +223,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Pathtracer/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Pathtracer/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                    Programming: Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     PathTracer
@@ -238,12 +238,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="LensSimulator/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="LensSimulator/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                     Programming: Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     Lens Simulator
@@ -253,12 +253,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Rasterizester/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Rasterizester/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                     Programming: Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     Rasterizester
@@ -268,12 +268,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="GeoMenagerie/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="GeoMenagerie/index.html" target="_blank" class="portfolio-box portfolio-link programming">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                    Programming: Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     GeoMenagerie
@@ -284,34 +284,34 @@
                 </div>
             </div>
             
-            <div class="row no-gutter">
+<!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link photography">
                         <img src="img/images.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Design
+                                    Photography
                                 </div>
                                 <div class="project-name">
-                                    Other Minor Projects</br> Images/GIFS of nametags, fliers, models, etc of other projects I worked on
+                                    Personal
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-            </div>
+<!--             </div> -->
                                                          
-            <div class="row no-gutter">
+<!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link graphic-design">
                         <img src="img/images.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Design
+                                    Graphic Design
                                 </div>
                                 <div class="project-name">
                                     University Catholic Conference of California Fliers, Nametags, etc.
