--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
+<!--             </div> -->
             
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
