--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link photography">
-                        <img src="img/images.jpg" class="img-responsive" alt="">
+                        <img src="img/natashabwe.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -307,7 +307,7 @@
 <!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link graphic-design">
-                        <img src="img/images.jpg" class="img-responsive" alt="">
+                        <img src="img/belovede.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
