--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation: Cloth Simulationm, Modeling
+                                    Animation: Cloth Simulationm, Rigging
                                 </div>
                                 <div class="project-name">
                                     The Generous Ghost
@@ -168,7 +168,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Web Development
+                                    Web Development
                                 </div>
                                 <div class="project-name">
                                     University Catholic Conference of California 2018 Website
@@ -183,7 +183,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Image Warping and Mosaicing
@@ -198,7 +198,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
@@ -213,7 +213,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Frequencies and Gradients
@@ -228,7 +228,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Computer Graphics
+                                    Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     PathTracer
@@ -243,7 +243,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                     Programming: Computer Graphics
+                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     Lens Simulator
@@ -258,7 +258,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                     Programming: Computer Graphics
+                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     Rasterizester
@@ -273,7 +273,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programming: Computer Graphics
+                                    Computer Graphics
                                 </div>
                                 <div class="project-name">
                                     GeoMenagerie
