--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <header> </header>
 <!--     <header>
         <div class="header-content">
             <div class="header-content-inner">
