--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation: Cloth Simulationm, Rigging
+                                    Animation: Cloth Simulation, Rigging
                                 </div>
                                 <div class="project-name">
                                     The Generous Ghost
