--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href=""#page-top">About</a>
+                        <a class="page-scroll" href="#page-top">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="about.html">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#resume">Resume</a>
@@ -332,8 +332,15 @@
 <!--                 <hr class="primary"> -->
                 <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
             </div>
+            <div class="row">
+                    <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
+                       <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fa fa-linkedin wow bounceIn"></i></a>
+                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
+                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a></p>
+                    <p>Last Updated: December 6, 2018</p>    
+            </div>
         </div>
-        div class="container">
+<!--         <div class="container"> -->
             <div class="row">
                 <div class="text-center">
                     <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
@@ -344,7 +351,7 @@
                 </div>
     
             </div>
-        </div>
+<!--         </div> -->
     </section>
 
     
