bg and resume on both pages

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#page-top">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html/#resume">Resume</a>
+                        <a class="page-scroll" href="#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <header> </header>
+    <header class="bg"> </header>
 <!--     <header>
         <div class="header-content">
             <div class="header-content-inner">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </header> -->
-     <section class="bg-primary" id="about">
+     <section class="bg" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -112,8 +112,13 @@
     </section> 
     
     
-    <section class="bg-dark" id="resume">
+    <section class="bg" id="resume">
         <div class="container text-center">
+            <div class="call-to-action">
+<!--                 <h3>Résumé</h3> -->
+<!--                 <hr class="primary"> -->
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
+            </div>
             <div class="row">
                      <p>
                         <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
