--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <header> </header>
+    <header class="bg"> </header>
 <!--     <header>
         <div class="header-content">
             <div class="header-content-inner">
@@ -116,7 +116,7 @@
 
     
 
-    <section class="no-padding bg-dark" id="portfolio">
+    <section class="no-padding bg" id="portfolio">
 <!--         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -325,7 +325,7 @@
             
         </div>
     </section>
-    <section class="bg-dark" id="resume">
+    <section class="bg" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
 <!--                 <h3>Résumé</h3> -->
