--- a/about.html
+++ b/about.html
@@ -46,14 +46,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="index.html">Portfolio</a>
+                        <a class="page-scroll" href="">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#page-top">About</a>
