--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="">Portfolio</a>
+                        <a class="page-scroll" href="index.html">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#page-top">About</a>
@@ -72,13 +72,13 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <div class="container">
-<!--                     <div class="row">
+                 <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 text-center boxed">
                             <h1>Vincent Escueta</h1>
                             <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
                             <hr class="primary">
                         </div>
-                    </div> -->
+                    </div>
                     <div class="row">
                         <div class="col-lg-6 col-sm-6 text-center boxed">
                             <img src="img/Vincent_Escueta1.jpg" height="288">
@@ -93,19 +93,19 @@
     </header> -->
      <section class="bg" id="about">
         <div class="container">
-            <div class="row">
+<!--             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h1>Vincent Escueta</h1>
                     <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
                     <hr class="primary">
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
+                    <img class="img-circle" src="img/face.jpg" height="360">
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <p class="text-faded">I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
+                    <p class="text-faded">Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
