--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                     <img class="img-circle" src="img/face.jpg" height="360">
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <p>Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
+                    <p class="extra-padding">Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
