--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
                         <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
                     </p>                    
-                    <p>Last Updated: December 5, 2018</p>
+                    <p class="update">Last Updated: December 6, 2018</p>
                 </div>
     
             </div>
