--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body id="page-top">
-
+    <script>document.body.className += ' fade-out';</script>
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
