--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 </head>
 
 <body id="page-top">
-
+    <script>document.body.className += ' fade-out';</script>
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -159,6 +159,7 @@
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+    <script src="js/faded.js"></script>
 
 
 </body>
