most most faded

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
-
+    <script src="js/faded.js"></script>
 
 </body>
 
