--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                     <img class="img-circle" src="img/face.jpg" height="360">
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <p class="extra-padding">Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
+                    <p class="extra-padding bigger-text">Hi, my name is Vincent Escueta and I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
             <div class="call-to-action">
 <!--                 <h3>Résumé</h3> -->
 <!--                 <hr class="primary"> -->
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i>    Résumé</a>
             </div>
             <div class="row">
                      <p>
@@ -105,7 +105,7 @@
                         <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
                         <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
                     </p>
-                    <p class="update">Last Updated: December 6, 2018</p>    
+                    <p class="update">Last Updated: December 7, 2018</p>    
             </div>
         </div>
     </section>
