--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
             <div class="call-to-action">
 <!--                 <h3>Résumé</h3> -->
 <!--                 <hr class="primary"> -->
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i><p> Résumé</p></a>
             </div>
             <div class="row">
                     <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fa fa-linkedin wow bounceIn"></i></a>
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a></p>
-                    <p>Last Updated: December 6, 2018</p>    
+                    <p>Last Updated: December 7, 2018</p>    
             </div>
         </div>
 
