--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <div class="call-to-action">
 <!--                 <h3>Résumé</h3> -->
 <!--                 <hr class="primary"> -->
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i>    Résumé</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><p><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</p></a>
             </div>
             <div class="row">
                      <p>
