--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="call-to-action">
 <!--                 <h3>Résumé</h3> -->
 <!--                 <hr class="primary"> -->
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i><p> Résumé</p></a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
             </div>
             <div class="row">
                     <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
