--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -19,8 +19,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="./main.css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="../index.html">Portfolio</a>
+                        <a class="page-scroll" href="./index.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../about.html">About</a>
+                        <a class="page-scroll" href="./about.html">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../index.html#resume">Resume</a>
+                        <a class="page-scroll" href="./index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -469,10 +469,10 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/jquery.fittext.js"></script>
-    <script src="../js/wow.min.js"></script>
-    <script src="../js/scrolling-nav.js"></script>
-    <script src="../js/faded.js"></script>
+    <script src="./js/jquery.easing.min.js"></script>
+    <script src="./js/jquery.fittext.js"></script>
+    <script src="./js/wow.min.js"></script>
+    <script src="./js/scrolling-nav.js"></script>
+    <script src="./js/faded.js"></script>
 </body>
 </html>
