--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -10,8 +10,12 @@
     }  
   </style> 
     <title>Vincent Escueta  |  CS 194-26</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Vincent Escueta">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="screen" />
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
@@ -23,7 +27,7 @@
     <link rel="stylesheet" href="../main.css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
 </head>
 <body>
     <script>document.body.className += ' fade-out';</script>
