is this the problem

--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
 </head>
 <body>
-    <script>document.body.className += ' fade-out';</script>
+     <!-- <script>document.body.className += ' fade-out';</script> -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
