--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Vincent Escueta">
 
     <title>Vincent Escueta</title>
 
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="autostitch/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="autostitch/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/autostitch.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -153,7 +153,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="Images/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/coloring.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -168,7 +168,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="FreqsandGrads/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="FreqsandGrads/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/freqs.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -183,7 +183,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Pathtracer/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="Pathtracer/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -198,7 +198,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="LensSimulator/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="LensSimulator/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -213,7 +213,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Rasterizester/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="Rasterizester/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -228,7 +228,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="GeoMenagerie/index.html" target="_blank" class="portfolio-box portfolio-link programming">
+                    <a href="GeoMenagerie/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -247,7 +247,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link photography">
+                    <a href="Others/index.html" class="portfolio-box portfolio-link photography">
                         <img src="img/natashabwe.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -266,7 +266,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link graphic-design">
+                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
                         <img src="img/belovede.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
