--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#page-top">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Resume</a>
+                        <a class="page-scroll" href="index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -93,11 +93,6 @@
     
     <section class="bg" id="resume">
         <div class="container text-center">
-            <div class="call-to-action">
-<!--                 <h3>Résumé</h3> -->
-<!--                 <hr class="primary"> -->
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
-            </div>
             <div class="row">
                      <p>
                         <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
