--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@
 
 </head>
 
-<body id="page-top">
-    <script>document.body.className += ' fade-out';</script>
+<body id="page-top" class="fade-out">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
